# StochasticGames

./: .dockerignore  .gitignore  .gitmodules  2023-02-09.md  2023-02-15.md  2023-03-05.md  2023-03-25.md  2023-03-26.md  2023-05-17.md  2023-06-13.md  Dockerfile  Ideas.md  Max Atom.md  Min Max System.md  Proofs.md  README.md  Random Graph.md  Untitled.ipynb  augment.py  generator.py  preprocessing.py
.github/workflows/: mpgcpp-build.yml
CounterStrategy/: .gitignore  CMakeLists.txt  Test  counter.cpp  extended_integer.h  games.h  operation.h  optimal.cpp  tropical_matrix.h  types.h
CounterStrategyPython/: .gitignore  Counter Strategy.ipynb  Games.ipynb  Networkx.ipynb  RandomGraphs.ipynb  Untitled.ipynb  extended_integer.py  graph.py  graph_visualisation.py  main.py  max_atom.py  mpg.py  random_graph.py  test.in  test.py  tests.in  union_find.py
CounterStrategyPython/data/: test02.in
Mean Pay-off Games/: Considerations.md  Counter Strategy.md  Optimal Strategy.md  Research Problem.md
References/: ArcConsistency.txt
experimental/: mpg  sample-pipeline.py
mpg/: .gitignore  Counter Strategy.ipynb  Games.ipynb  Graph Execution.ipynb  Graph Generation Benchmark.ipynb  MPG Generation.ipynb  MPG Solving Runtime.ipynb  Networkx.ipynb  Optimal Strategy.ipynb  RandomGraphs.ipynb  Size Analysis.ipynb  __init__.py  benchmark.csv  benchmark_gnp_random_mpg.csv  environment-cuda.yml  environment.yml  execution_time.csv  execution_time_sparse.csv  generator.py  main.py  mpgio.py  requirements.txt  test.py
mpg/algbera/: __init__.py
mpg/csp/: __init__.py  constraint_satisfaction.py  max_atom.py  or_tools.py  test_max_atom.py  test_minmax_system.py
mpg/data/: test01.in  test04.in
mpg/games/: __init__.py  fractional.py  mpg.py  strategy.py  test_mpg.py
mpg/gnn/: __init__.py  aggregator.py  gcn.py  sgcn.py
mpg/graph/: algorithms.py  random_graph.py
mpg/rl/: agents.py  arena.py  driver.py  environment.py  model_free.py  network.py  observers.py  policy.py  replay_buffers.py  utils.py
mpg/sp/: MPGGame.py  MPGLogic.py  MPGNNet.py  MPGPlayers.py  NNet.py  Test.ipynb
mpg/visualisation/: colors.py  game.py  graph.py
mpg/wrapper/: .gitignore  __init__.py  mpgcpp.py  test_wrapper.py  wrapper.py
mpgcpp/: .gitignore  CMakeLists.txt  MPGReader.h  MaxAtomSystem.h  MeanPayoffGame.h  MinMaxSystem.h  ProgramOptions.cpp  ProgramOptions.h  PyMPGWrapper.cpp  Variable.cpp  Writer.cpp  Writer.h  main.cpp  mpgcpp.template
mpgcpp/csp/: MinMaxSystem.h  Variable.h
mpgcpp/example/: CMakeLists.txt  MeanPayoffs.cpp
mpgcpp/game/: MeanPayoffGame.h
mpgcpp/include/: IntRange.h  ProgramOptions.h  Writer.h
mpgcpp/include/csp/: MaxAtomSolver.h  MaxAtomSystem.h  MinMaxSystem.h  Variable.h
mpgcpp/include/csp/solver/: DenseSolver.h  ParallelMaxAtomSolver.h  SolverConverter.h
mpgcpp/include/game/: MeanPayoffGame.h  Strategy.h
mpgcpp/include/mdp/: PolicyIteration.h  ValueIteration.h  mdp.h
mpgcpp/mpgio/: MPGReader.h
mpgcpp/src/: MPGGenerator.cpp  MPGSolver.cpp  ProgramOptions.cpp  PyMPGWrapper.cpp  Writer.cpp
mpgcpp/src/csp/: Variable.cpp
mpgcpp/tests/: nary_max_double_test.cpp  nary_max_test.cpp  ternary_max_double_test.cpp  ternary_max_test.cpp  utils.cpp  utils.h
notebooks/: Counter Strategy.ipynb  Equivalence.ipynb  Figures  Figures.ipynb  Fractional Strategy.ipynb  Games.ipynb  Graph Execution.ipynb  Graph Generation Benchmark.ipynb  Graph Neural Network.ipynb  ML Test.ipynb  MPG Generation.ipynb  Networkx.ipynb  Optimal Strategy.ipynb  RandomGraphs.ipynb  Reinforcement.ipynb  SelfPlay.ipynb  Size Analysis.ipynb  Untitled.ipynb  Untitled1.ipynb  Untitled2.ipynb  Untitled3.ipynb  Untitled4.ipynb  Untitled5.ipynb  Untitled6.ipynb  log.txt  stats.jsonl
notebooks/.ipynb_checkpoints/: Equivalence-checkpoint.ipynb  Games-checkpoint.ipynb  Graph Execution-checkpoint.ipynb  ML Test-checkpoint.ipynb  Optimal Strategy-checkpoint.ipynb  Untitled-checkpoint.ipynb  log-checkpoint.txt  test-checkpoint.py
notebooks/cache/: bad_sparse_graphs.csv  degree_sparse_graphs.csv  dense_graphs.csv  sparse_graphs.csv
notebooks/data/: Untitled.ipynb  test01.in  test04.in
notebooks/model_data/: weights.data-00000-of-00001  weights.index
notebooks/report/: Random Graphs.ipynb
notebooks/temp/: checkpoint_0.pth.tar.examples  checkpoint_1.pth.tar.examples  checkpoint_2.pth.tar.examples  checkpoint_3.pth.tar.examples  checkpoint_4.pth.tar.examples  checkpoint_5.pth.tar.examples  checkpoint_6.pth.tar.examples  checkpoint_7.pth.tar.examples  temp.h5
notebooks/test/: fingerprint.pb  keras_metadata.pb  saved_model.pb
notes/: 2023-02-15.md  2023-03-25.md  2023-04-09.md  2023-04-11.md  2023-04-13.md  2023-05-17.md  2023-06-11.md  2023-06-13.md  2023-06-20.md  Complete Pipeline.md  Counting Simple  Cycles.md  Fractional Strategy.md  Papers.md  Random Mean Payoff Games.md  Reinforcement Learning.md  Report.md
papers/: gnn_papers.txt
report/: .~lock.PageDeGarde.docx#  Algorithms  PageDeGarde.docx  Rapport.tex  acronyms.aux  acronyms.tex  biblio.bib  glossary.tex  main.acn  main.acr  main.alg  main.aux  main.bbl  main.blg  main.glsdefs  main.ist  main.loa  main.lof  main.lot  main.out  main.run.xml  main.tex  main.toc
report/Figures/: .$AlphaZero.drawio.bkp  .$AlphaZero.drawio.dtmp  .$AnnotationThreads.drawio.bkp  .$DatasetAnnotation.drawio.bkp  .$DatasetGeneration.drawio.bkp  .$Gant.drawio.bkp  .$ServiceDiagram.drawio.bkp  .$ServiceDiagram.drawio.dtmp  .$ServiceRelations.drawio.bkp  .$ServiceRelations.drawio.dtmp  Agile.xcf  AlphaZero.drawio  AlphaZeroSelfPlay.ppm  AlphaZeroSelfPlay.xcf  AnnotationThreads.drawio  CNN.xcf  DatasetAnnotation.drawio  DatasetGeneration.drawio  Gant  Gant.drawio  GantLibrary.xml  RLDiagram  RLDiagram.xcf  ServiceDiagram.drawio  ServiceRelations.drawio  export_svg
report/Template/: Copie de PageDeGarde.docx  Copie de references.bib  packages.tex
report/chapters/: Introduction.tex  abstract.tex  acknowledgment.tex  appendix01.tex  appendix02.tex  appendix03.tex  chapter00.tex  chapter01.tex  chapter02.tex  chapter03.tex  chapter04.tex  (+5 more)
script/: supervised.py
(+49 files in other folders)
